Removed unnecessary test dependencies from module-info.java and refactored shared test classes.